# Warp

./: .gitmodules  ARCHITECTURE.md  ARCHITECTURE_ENHANCEMENTS.md  BUILD_TROUBLESHOOTING.md  CLASSIC_INPUT_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT_GUIDE.md  EXAMPLES_COMPLETION_REPORT.md  EXAMPLES_SHOWCASE.md  INTEGRATION_GUIDE.md  MERMAID_DIAGRAMS.md  MODULE_DOCUMENTATION.md  PROJECT_COMPLETION_REPORT.md  QUICK_REFERENCE.md  TERMINAL_APPS_SUMMARY.md  UNIVERSAL_INPUT_IMPLEMENTATION_SUMMARY.md  WARP_TERMINAL_UI_IMPLEMENTATION.md  build.sh  package.json  vercel-build.sh  vercel.json
terminal-apps/: BLOCKS_GUIDE.md  CLASSIC_INPUT_GUIDE.md  Cargo.toml  EXAMPLES_GUIDE.md  README.md  TERMINAL_UI_GUIDE.md  UNIVERSAL_INPUT_GUIDE.md
terminal-apps/examples/: accessibility_example.rs  blocks_demo.rs  build_monitor.rs  classic_input_demo.rs  config_manager.rs  interactive_cli.rs  main.rs  task_manager.rs  universal_input_demo.rs  warp_ui.rs
terminal-apps/keysets/: vscode.yaml
terminal-apps/src/: app.rs  config_loader.rs  keyset.rs  lib.rs  theme.rs  ui_app.rs  workflow.rs
terminal-apps/src/blocks/: block.rs  manager.rs  mod.rs  operations.rs  renderer.rs  storage.rs
terminal-apps/src/classic_input/: agent_mode.rs  command_history.rs  editor.rs  mod.rs  prompt.rs  text_selection.rs
terminal-apps/src/modern_editing/: mod.rs
terminal-apps/src/ui/: components.rs  layout.rs  mod.rs  renderer.rs  state.rs  styles.rs
terminal-apps/src/universal_input/: advanced_input.rs  contextual_chips.rs  (+4 more)
terminal-apps/themes/: neon_night.yaml
terminal-apps/workflows/: build_and_deploy.yaml
(+1 files in other folders)
