[package]
name = "warp-terminal-apps"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
crossterm = "0.27"
colored = "2.1"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
warp-workflows-types = { path = "../workflows/workflow-types" }
anyhow = "1.0"
thiserror = "1.0"

[lib]
name = "warp_terminal_apps"
path = "src/lib.rs"

[[example]]
name = "task_manager"
path = "examples/task_manager.rs"

[[example]]
name = "build_monitor"
path = "examples/build_monitor.rs"

[[example]]
name = "config_manager"
path = "examples/config_manager.rs"

[[example]]
name = "main"
path = "examples/main.rs"

[[example]]
name = "interactive_cli"
path = "examples/interactive_cli.rs"

[[example]]
name = "accessibility_example"
path = "examples/accessibility_example.rs"
